# experiment-monitoring

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TCP_IP_socket.py  auxil_p.py  calib.p  calib.py  calib.sh  config.py  deploy.sh  eth_com.py  exec.py  exp_surv 2.py  exp_surv.py  exp_surv.txt  exp_surv_init.csv  exp_surv_test.csv  filter_past_spikes.py  filter_spikes.py  gui.py  inbounds_check.py  influxdb_write.py  influxdb_write.py.save  mail_client.py  phidget.py  phidgets.py  pyproject.toml  sensor.py  serial_com.py  server_setup.md  server_setup.sh  setup.cfg  setup.py  setup.sh  spike_filter.py  spike_times.p  temperature_data_py.csv  test.py  test_gui.py  (+4 more)
.github/workflows/: tests.yml
.ipynb_checkpoints/: server_setup-checkpoint.md
arduino_exp_monitor/: arduino_exp_monitor.ino
arduino_serial/arduino_serial/: arduino_serial.ino
docs/: requirements.txt  requirements_dev.txt  server_setup.md
eth_com/: eth_com.ino
exp_monitor/: config.py  exec.py
exp_monitor/adc/: adc_setup.md  arduino_adc.py
exp_monitor/calibrations/: calib.p  calib_exec.sh
exp_monitor/classes/: database.py  influxdb_write.py  phidget.py  phidget_tc.py  sensor.py  serial_com.py  tpg261.py  tpg300.py  unit_conv.py
exp_monitor/utilities/: database.py  db_spike_filter.py  inbounds_check.py  influxdb_write.py  spike_filter.py  utility.py
exp_surv_vac/: exp_surv_vac.ino
local_IP_serial/: local_IP_serial.ino
server_setup/: expmonitor.service  server_setup.sh
server_setup/files/: expmonitor.service  grafana.ini  influxdb.conf  locale.gen
src/expmonitor/: config.py  (+1 more)
test_ethernet/: test_ethernet.ino
tests/: conftest.py  test_credentials.py  test_exception_handler.py  test_import.py  test_phidgets.py  test_phidgets.sh  test_spike_filter.py  test_utility.py
(+19 files in other folders)
