[metadata]
name = expmonitor
version = 1.0
description = Automated monitoring of lab equipment via time series visualization and automatic e-mail alerts.
author = JP Bureik
license = GPL-3.0 
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    find_namespace:
    # [
    #     'expmonitor',
    #     'expmonitor.calibrations',
    #     'expmonitor.classes',
    #     'expmonitor.classes.adc',
    #     'expmonitor.classes.ups',
    #     'expmonitor.utilities'
    #     ]
install_requires =
    easysnmp>0
    influxdb>=5
    matplotlib>=3
    numpy>=1
    pandas>=1
    Phidget22>1
    pyserial>3
    scipy>=1
    tqdm>=4
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest_cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
expmonitor = py.typed

[flake8]
max-line-length = 79